--- a/index.html
+++ b/index.html
@@ -32,13 +32,10 @@
                                     <a href="#about" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Tentang Saya</a>
                                 </li>
                                 <li class="group">
+                                    <a href="#experience" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Experience</a>
+                                </li>
+                                <li class="group">
                                     <a href="#portofolio" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Portofolio</a>
-                                </li>
-                                <li class="group">
-                                    <a href="#clients" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Clients</a>
-                                </li>
-                                <li class="group">
-                                    <a href="#blog" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Blog</a>
                                 </li>
                                 <li class="group">
                                     <a href="#contact" class="text-base text-dark py-2 mx-8 flex group-hover:text-primary">Contact</a>
@@ -58,9 +55,9 @@
                     <div class="w-full self center px-4 lg:w-1/2 mt-10">
                         <h1 class="text-base font-semibold text-primary md:text-xl lg:text-2xl">Halo Semua 👋, 
                         saya <span class="block font-bold text-dark text-4xl mt-1 lg:text-5xl ">Hilmy Tsaqif Firdaus</span></h1>
-                        <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student & 
-                        <span class="text-dark">Web Designer</span></h2>
-                        <p class="font-medium text-secondary mb-10">Coding itu mudah dan menyenangkan</p>
+                        <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student in
+                        <span class="text-dark">Jendral Soedirman University</span></h2>
+                        <p class="font-medium text-secondary mb-10">"The only way to do great work is to love what you do." - Steve Jobs</p>
                         <a hre="#" class="text-base font-semibold text-white 
                         bg-primary py-3 px-8 rounded-full hover:shadow-lg
                         hover:bg-cyan-700 transition duration-500 ease-in-out">Hubungi Saya</a>
@@ -86,12 +83,12 @@
                 <div class="flex flex-wrap">
                     <div class="w-full px-4 mb-10 lg:w-1/2">
                         <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
-                        <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Kalau yang lain Tidak bisa, apalagi saya</h2>
-                        <p class="font-medium text-base text-secondary max-w-xl lg-text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi sit harum magnam ipsa numquam eius voluptas saepe voluptate natus recusandae.</p>
+                        <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Perkenalan</h2>
+                        <p class="font-medium text-base text-secondary max-w-xl lg-text-lg justify-center">Saya mahasiswa Teknik Elektro di Universitas Jenderal Soedirman, saya memiliki ketertarikan yang mendalam pada bidang robotik dan matematika. Saya fokus pada pemahaman teori dan aplikasi praktis yang melibatkan pemrograman robot. Saya juga aktif mengikuti workshop dan seminar terkait untuk memperdalam pengetahuan serta keterampilan, dengan tujuan berkontribusi dalam pengembangan teknologi robotik dan aplikasi matematika di masa depan..</p>
                     </div>
                     <div class="w-full px-4 lg:w-1/2">
                         <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Mari Berteman</h3>
-                        <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam ipsa eaque omnis reiciendis, ipsam, officia, nulla debitis odio possimus unde eos aperiam.</p>
+                        <p class="font-medium text-base text-secondary mb-6 lg:text-lg">Anda Bisa Menghubungi Sosial Media Saya dibawah Ini.</p>
                         <div class="flex items-center">
                             <!-- youtube -->
                             <!-- kalo udah punya akun di tambahin blank kaya ig -->
@@ -111,7 +108,7 @@
                                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>TikTok</title><path d="M12.525.02c1.31-.02 2.61-.01 3.91-.02.08 1.53.63 3.09 1.75 4.17 1.12 1.11 2.7 1.62 4.24 1.79v4.03c-1.44-.05-2.89-.35-4.2-.97-.57-.26-1.1-.59-1.62-.93-.01 2.92.01 5.84-.02 8.75-.08 1.4-.54 2.79-1.35 3.94-1.31 1.92-3.58 3.17-5.91 3.21-1.43.08-2.86-.31-4.08-1.03-2.02-1.19-3.44-3.37-3.65-5.71-.02-.5-.03-1-.01-1.49.18-1.9 1.12-3.72 2.58-4.96 1.66-1.44 3.98-2.13 6.15-1.72.02 1.48-.04 2.96-.04 4.44-.99-.32-2.15-.23-3.02.37-.63.41-1.11 1.04-1.36 1.75-.21.51-.15 1.07-.14 1.61.24 1.64 1.82 3.02 3.5 2.87 1.12-.01 2.19-.66 2.77-1.61.19-.33.4-.67.41-1.06.1-1.79.06-3.57.07-5.36.01-4.03-.01-8.05.02-12.07z"/></svg>
                             </a>
                             <!-- linkedin -->
-                            <a href="#" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border text-stone-300 border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
+                            <a href="http://www.linkedin.com/in/hilmy-tsaqif-firdaus-696572319" target="_blank" class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border text-stone-300 border-slate-300 hover:border-primary hover:bg-primary hover:text-white">
                                 <svg role="img" width="20" class="fill-current" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
                             </a>
                         </div>
@@ -122,14 +119,13 @@
         </section>
         <!-- About Section End -->
 
-        <!-- Portofolio Section Start -->
-        <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+        <!-- Experience Section Start -->
+        <section id="experience" class="pt-36 pb-16 bg-slate-100">
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
-                        <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-                        <p class="font-md text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, nam natus? Doloribus similique temporibus ullam tempora delectus pariatur distinctio tenetur!</p>
+                        <h4 class="font-semibold text-lg text-primary mb-2">MY EXPERIENCE</h4>
+                        <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Pencapaian Terbaru</h2>
                     </div>
                 </div>
 
@@ -139,87 +135,73 @@
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/portofolio/1.png" alt="web shop" width="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Takumi Farm by Hilmy Tsaqif Firdaus</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt tempore sint assumenda rem tenetur consectetur, placeat distinctio quo nobis! Quidem ad saepe odio amet sint!</p>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Juara 2 Kompetis Sains Madrasah Bidang Matematika</h3>
+                        <p class="text-3xl font-bold text-primary mb-3">2022</p>
+                        <p class="font-medium text-base text-secondary">Juara 2 Se-Kabupaten Purwakarta yang di Selenggarakan Kementrian Agama dan Melaju ke Tingkat Provinsi</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/portofolio/2.png" alt="web learnning" width="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">First Web</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro saepe odio pariatur sint cumque est dolore similique!</p>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Juara 2 Lomba Robot Line Follower</h3>
+                        <p class="text-3xl font-bold text-primary mb-3">2022</p>
+                        <p class="font-medium text-base text-secondary">Juara 2 Se-Provinsi Jawa Barat Pada Ajang Mechatronic Competion 2022, Yang di Selenggarakan Politeknik Enggenering Indonesia</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/portofolio/3.png" alt="shop list" width="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Shop List</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam esse quas quidem.</p>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Juara 1 Kursus Phyton</h3>
+                        <p class="text-3xl font-bold text-primary mb-3">2024</p>
+                        <p class="font-medium text-base text-secondary">Menjadi Juara 1 dan Yang terbaik di Grup Kursus Coding Phyton Yang di Selenggarakan Kodland</p>
                     </div>
                     <div class="mb-12 p-4 md:w-1/2">
                         <div class="rounded-md shadow-md overflow-hidden">
                             <img src="dist/img/portofolio/4.png" alt="login page" width="w-full">
                         </div>
-                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Login Page</h3>
-                        <p class="font-medium text-base text-secondary">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quisquam eius quae sit quibusdam minima et ut magni impedit incidunt!</p>
+                        <h3 class="font-semibold text-xl text-dark mt-5 mb-3">16-Besar Lomba Robot Transporter</h3>
+                        <p class="text-3xl font-bold text-primary mb-3">2024</p>
+                        <p class="font-medium text-base text-secondary">16-Besar dari 55 Peserta dan Top 2 Pada Babak Kualifikasi 16-besar Pada Ajang Polines Robotic Contest 2024, yang di Selenggarakan Politeknik Negeri Semarang</p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Portofolio Section End -->
+        <!-- Experience Section End -->
 
-        <!-- Clients Section Start -->
-         <section id="clients" class="pt-36 pb-32 bg-slate-800">
-            <div class="container">
-                <div class="w-full px-4">
-                    <div class="mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
-                        <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">OTW Kerja Sama</h2>
-                        <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et, nam natus? Doloribus similique temporibus ullam tempora delectus pariatur distinctio tenetur!</p>
-                    </div>
-                </div>
-
-                <div class="w-full px-4">
-                    <div class="flex flex-wrap items-center justify-center">
-                        <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/google.svg" alt="google">
-                        </a>
-                        <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/bca.svg" alt="google">
-                        </a>
-                        <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/microsoft.svg" alt="google">
-                        </a>
-                        <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition duration-500 hover:grayscale-0 hover:opacity-100 lg:mx-6 xl:mx-8">
-                            <img src="dist/img/clients/spotify.svg" alt="google">
-                        </a>
-                    </div>
-                </div>
-            </div>
-         </section>
-        <!-- Clients Section End -->
-
-        <!-- Blog Section Start -->
-         <section id="blog" class="pt-36 pb-32 bg-slate-100">
+        <!-- Portofolio Section Start -->
+         <section id="portofolio" class="pt-36 pb-32 bg-slate-800">
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
-                        <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Tulisan Terkini</h2>
-                        <p class="font-md text-md text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat nostrum voluptate provident tempora labore facilis.</p>
+                        <h4 class="font-semibold text-lg text-primary mb-2">Portofolio</h4>
+                        <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Saya</h2>
+                        <p class="font-md text-md text-secondary md:text-lg">Ini dalah Hasil Robot yang Pernah saya Kerjakan Bersama Tim Saya.</p>
+                    </div>
+
+                    <div class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
+                        <div class="mb-12 p-4 md:w-1/2">
+                            <div class="rounded-md shadow-md overflow-hidden">
+                                <img src="dist/img/clients/robot1.png" alt="web shop" width="w-full">
+                            </div>
+                        </div>
+                        <div class="mb-12 p-4 md:w-1/2">
+                            <div class="rounded-md shadow-md overflow-hidden">
+                                <img src="dist/img/clients/robot2.png" alt="web learnning" width="w-full">
+                            </div>
+                        </div>
                     </div>
                 </div>
          </section>
-         <!-- Blog Section End -->
+        <!-- Portofolio Section End -->
 
          <!-- Contact Section Start-->
-          <section id="contact" class="pt-36-pb-32">
+          <section id="contact" class="pt-36-pb-32 mt-20">
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
                         <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Hubungi Kami</h2>
-                        <p class="font-md text-md text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat nostrum voluptate provident tempora labore facilis.</p>
+                        <p class="font-md text-md text-secondary md:text-lg">Silahkan anda bisa memberikan Kritik Atau Saran.</p>
                     </div>
                 </div>
                 <form>
@@ -255,7 +237,7 @@
                         <p>hilmyfirdaus87@gmail.com</p>
                     </div>
                     <div class="w-full px-4 mb-12 md:w-1/3">
-                        <h3 class="font-semibold text-xl text-white mb-5">KategoriTulisan</h3>
+                        <h3 class="font-semibold text-xl text-white mb-5">Kategori Tulisan</h3>
                         <ul class="text-slate-300">
                             <li>
                                 <a href="#" class="inline-block text-base hover:text-primary mb-3">Programming</a>
@@ -278,10 +260,10 @@
                                 <a href="#about" class="inline-block text-base hover:text-primary mb-3">Tentang Saya</a>
                             </li>
                             <li>
-                                <a href="#portofolio" class="inline-block text-base hover:text-primary mb-3">Portofolio</a>
+                                <a href="#experience" class="inline-block text-base hover:text-primary mb-3">Experience</a>
                             </li>
                             <li>
-                                <a href="#blog" class="inline-block text-base hover:text-primary mb-3">Blog</a>
+                                <a href="#portofolio" class="inline-block text-base hover:text-primary mb-3">Portofolio</a>
                             </li>
                             <li>
                                 <a href="#contact" class="inline-block text-base hover:text-primary mb-3">Contact</a>
