--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Student in
                         <span class="text-dark">Jendral Soedirman University</span></h2>
                         <p class="font-medium text-secondary mb-10">"The only way to do great work is to love what you do." - Steve Jobs</p>
-                        <a hre="#" class="text-base font-semibold text-white 
+                        <a href="https://drive.google.com/file/d/14w6nzk6Lxfkd-YLdgAt_uLIVDFlygZHF/view?usp=sharing" target="_blank" class="text-base font-semibold text-white 
                         bg-primary py-3 px-8 rounded-full hover:shadow-lg
                         hover:bg-cyan-700 transition duration-500 ease-in-out">Hubungi Saya</a>
                     </div>
